@@ -1,7 +1,6 @@
 BUGS:
 raster: 	must update dox docs fully
 cK:		keeping the groups file in sync with the existing groups that need to be remembered. I'm sure there are bugs in that.
-mandrake:   kpanel doesn't update window titles in the taskbar.  needs fixing
 mandrake:   kontrol-center seems to crash E when you click on desktop. needs fixing
 
 FEATURES:
