@@ -1046,3 +1046,23 @@ KDE_HintChange(Atom a)
    EDBUG_RETURN_;
 
 }
+
+void
+KDE_UpdateTitle(EWin * ewin)
+{
+
+   EDBUG(6, "KDE_NewWindow");
+
+   if (!ewin)
+      EDBUG_RETURN_;
+
+   XChangeProperty(disp, ewin->win, KDE_WIN_TITLE,
+		   XA_STRING, 8, PropModeReplace,
+		   (unsigned char *)ewin->client.title,
+		   strlen(ewin->client.title) + 1);
+   if (!(ewin->internal))
+      KDE_SendMessagesToModules(KDE_MODULE_WIN_CHANGE, ewin->win);
+
+   EDBUG_RETURN_;
+
+}
